# deep-learning-demo

./: .gitignore  Cargo.toml  Makefile  README.md
.github/workflows/: action.yml
example/: Cargo.toml
example/examples/: batch-norm2d.rs  sigmoid.rs  softmax.rs  tch-cell-phone-price.rs  tch-cifar10.rs  tch-dropout.rs  tch-lstm.rs  tch-multiple-symbol-conv2d.rs  tch-poll2d-conv2d.rs  tch-rnn-lyrics.rs  tch-single-symbol-conv2d.rs  tch-word-embedding.rs
example/src/: main.rs
examples/: nn-xor.rs  sigmoid-backward.rs  tch-cell-phone-price.rs
mylib/: Cargo.toml
mylib/src/: cifar10.rs  img.rs  lib.rs
src/: main.rs
