[package]
name = "deep-learning-demo"
version = "0.1.0"
edition = "2024"

[dependencies]
ndarray = "0.16"
plotters = "0.3"
ndarray-rand = "0.15"

# tch = "0.20"

[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "sigmoid"
path = "src/bin/sigmoid.rs"

[[bin]]
name = "tanh"
path = "src/bin/tanh.rs"

[[bin]]
name = "relu"
path = "src/bin/relu.rs"

[[bin]]
name = "softmax"
path = "src/bin/softmax.rs"

[[bin]]
name = "initializer"
path = "src/bin/initializer.rs"

[[bin]]
name = "nn-xor"
path = "src/bin/nn-xor.rs"
