[package]
name = "deep-learning-demo"
version = "0.1.0"
edition = "2024"

[dependencies]
approx = "0.5"
ndarray = "0.16"
plotters = "0.3"
ndarray-rand = "0.15"
tch = { version = "0.20", features = ["download-libtorch"] }

[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "sigmoid"
path = "src/bin/sigmoid.rs"

[[bin]]
name = "tanh"
path = "src/bin/tanh.rs"

[[bin]]
name = "relu"
path = "src/bin/relu.rs"

[[bin]]
name = "softmax"
path = "src/bin/softmax.rs"

[[bin]]
name = "initializer"
path = "src/bin/initializer.rs"

[[bin]]
name = "nn-xor"
path = "src/bin/nn-xor.rs"

[[bin]]
name = "sigmoid-backward"
path = "src/bin/sigmoid-backward.rs"

[[bin]]
name = "tch-demo"
path = "src/bin/tch-demo.rs"

[[bin]]
name = "tch-xor"
path = "src/bin/tch-xor.rs"

[[bin]]
name = "weight-mean"
path = "src/bin/weight-mean.rs"

[[bin]]
name = "tch-dropout"
path = "src/bin/tch-dropout.rs"
