[package]
name = "mylib"
version.workspace = true
edition.workspace = true

[dependencies]
tar.workspace = true
image.workspace = true
anyhow.workspace = true
flate2.workspace = true
reqwest = { workspace = true, features = ["blocking"] }
tch = { workspace = true, features = ["download-libtorch"] }
