[package]
name = "mylib"
version.workspace = true
edition.workspace = true

[dependencies]
tar.workspace = true
image.workspace = true
anyhow.workspace = true
flate2.workspace = true
tokio-stream.workspace = true
tokio = { workspace = true, features = ["full"] }
reqwest = { workspace = true, features = ["stream"] }
tch = { workspace = true, features = ["download-libtorch"] }

[[bin]]
name = "mylib-main"
path = "bin/main.rs"
